# OS_LAB_3

./: CMakeLists.txt  README.md
src/: main.cpp  marker.cpp  marker.h
test/: test.cpp
